--- a/assig8/css/index.css
+++ b/assig8/css/index.css
@@ -1,4 +1,3 @@
-/* CSS Reset */
 * {
   margin: 0;
   padding: 0;
@@ -207,7 +206,7 @@ input.error {
   margin-bottom: 15px;
 }
 
-/* Just the slider handle */
+/* slider handle */
 .ui-slider-horizontal .ui-slider-handle {
   background: #fff;
   border: none;
@@ -287,132 +286,4 @@ h1.name {
   background-color: black;
   color: red;
   font-family: "Righteous";
-}
-
-/* Assignment 7 title */
-.highlight_gold {
-  background-color: ;
-  color: black;
-  font-family: "Sigmar One";
-  font-size: 50%;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.highlight_centered {
-  background-color: ;
-  color: crimson;
-  font-family: "Advent Pro";
-  font-size: 200%;
-  font-weight: 900;
-  text-align: center;
-}
-
-.highlight_centered_margins {
-  background-color: ;
-  color: black;
-  font-family: "Advent Pro";
-  font-size: 200%;
-  font-weight: 900;
-  margin: 10px;
-  text-align: center;
-}
-
-.highlight_left_aligned {
-  background-color: black;
-  color: white;
-  font-family: "Advent Pro";
-  font-size: 200%;
-  font-weight: 900;
-  text-align: left;
-}
-
-.highlight_right_aligned {
-  background-color: black;
-  color: white;
-  font-family: "Advent Pro";
-  font-size: 200%;
-  font-weight: 900;
-  margin-right: -20px;
-  text-align: right;
-}
-
-.highlight_text_underline {
-  background: black;
-  font-weight: bold;
-  text-decoration: underline;
-}
-
-.highlight_text_underline_centered {
-  background-color: black;
-  color: white;
-  font-family: "Advent Pro";
-  font-size: 200%;
-  font-weight: 900;
-  text-align: center;
-  font-weight: bold;
-  text-decoration: underline;
-}
-
-.left_align {
-  color: white;
-  text-align: left;
-  font-family: "Advent Pro";
-  font-size: 200%;
-}
-
-.right_align {
-  color: white;
-  text-align: left;
-  font-family: "Advent Pro";
-  font-size: 200%;
-}
-
-.white_text {
-  background-color: black;
-  color: white;
-  font-family: "Advent Pro";
-  font-size: 200%;
-}
-
-.dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -1px;
-}
-
-.dropdown-menu li:hover .sub-menu {
-    visibility: visible;
-}
-
-.dropdown:hover .dropdown-menu {
-    display: block;
-}
-
-.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
-    margin-top: 0;
-}
-
-.navbar .sub-menu:before {
-    border-bottom: 7px solid transparent;
-    border-left: none;
-    border-right: 7px solid rgba(0, 0, 0, 0.2);
-    border-top: 7px solid transparent;
-    left: -7px;
-    top: 10px;
-}
-.navbar .sub-menu:after {
-    border-top: 6px solid transparent;
-    border-left: none;
-    border-right: 6px solid #fff;
-    border-bottom: 6px solid transparent;
-    left: 10px;
-    top: 11px;
-    left: -6px;
-}
-
-.sidebar-nav {
-    padding: 9px 0;
 }
